export interface Beneficio {
    calcularBeneficio(sumaDeProductos: number): number;
}