export enum ESTADO_PEDIDO {
    EN_CONSTRUCCION,
    PENDIENTE,
    EN_PREPARACION,
    LISTO,
    PAGO
}