@startuml Trabajo practico

skinparam classAttributeIconSize 0

enum ESTADO_ITEM {
    PENDIENTE
    EN_PREPARACION
    LISTO
}

enum ESTADO_PEDIDO {
    EN_CONSTRUCCION
    PENDIENTE
    EN_PREPARACION
    LISTO
    PAGO
}

enum MEDIO_DE_PAGO {
    EFECTIVO
    TARJETA_DEBITO
    TARJETA_CREDITO
    BILLETERA_VIRTUAL
}

enum DIA_SEMANA {
    DOMINGO
    LUNES
    MARTES 
    MIERCOLES
    JUEVES
    VIERNES
    SABADO 
}

enum TIPO_ESTACION {
    PARRILLA
    COCINA_FRIA
    BARRA
    COCINA_DULCE
}

class GestorPedidos {
    - pedido: Pedido
    - historialDePedidos: Pedido[]

    + pedidoPago()
    + consultarHistorial()
    + agregarItem()
    + agregarCombo()
    + eliminarItem()
    + eliminarCombo()
    + modificarPedido()
    + confirmarPedido()
    + asignarAEstaciones()
    + calcularPrecioTotal()
}

abstract class Pedido {
    - numeroDePedido
    - cliente: Cliente
    - items: Item[]
    - combos: Combo[]
    - precioTotal
    - medioDePago: MediosDePago
    - estadoDelPedido
    - diaActual: DIA_SEMANA

    + abstract pedir()
    + abstract entregar() 
        'mover al mozo o cadete
    + estadoItems()
}

class PedidoSalon {
    - mozo: Mozo
    - numeroDeMesa
    - pedidoMesaCerrada
}

class PedidoRetiro {
    - horarioDeRetiro
    - numeroDeTelefono
    - pedidoRetirado
}

class PedidoEnvio {
    - direccionDeEntrega
    - costoDeEnvio
    - cadete: Cadete
    - barrio
    - pedidoEntregado
}

interface MediosDePago {
    + pagoCompletado()
}

abstract class Tarjeta {
    - medioDePago: MediosDePago
    - numeroTarjeta
    - nombreTitular
    - codigoSeguridad
    - fechaVencimiento
    - saldo
}

class TarjetaCredito {

}

class TarjetaDebito {

}

class Efectivo {

}

class BilleteraVirtual {

}

class Cliente {
    - mesaAsignada

    + pagarPedido()
    + pedirPedido()
}

abstract class Empleado {
    - clientes: Cliente
    - pedidos: Pedido

    + cobrarPedido()
}

class Mozo {
    - gestorDePedido: GestorPedidos
}

class Cadete {

}

Class Menu {
    - combos: Combo
    - items: Item
}

class Combo {
    - items: Item[]
    - precioCombo
    - beneficios: Beneficio
}

class Item {
    - estacion: Estacion
    - estadoDelItem
    - precioIndividual
}

interface Beneficio {
    + calcularBeneficio()
}

class BeneficioPorPorcentaje {

}

class BeneficioPorPrecioFijo {

}

class DescuentoPorPagoEfectivo {
    - porcentajeAplicado
}

class DescuentoPorDiaDeSemana {
    - diasQueAplica
    - porcentajeAplicado
    - precioAplicado
}


abstract class Estacion {
    - items: Item

    + preparandoItem()
    + itemFinalizado()
}

class Parrilla {

}

class CocinaFria {
    
}

class Barra {
    
}

class CocinaDulce {
    
}

'relaciones

Pedido <|-l- PedidoSalon
Pedido <|-r- PedidoRetiro
Pedido <|-- PedidoEnvio

Empleado <|-- Mozo
Empleado <|-- Cadete

Estacion <|-r- Parrilla
Estacion <|-- CocinaFria
Estacion <|-u- Barra
Estacion <|-- CocinaDulce

Menu *-- Item
Menu *-- Combo
Combo *-r- Item

Beneficio <|.. BeneficioPorPorcentaje
Beneficio <|.. BeneficioPorPrecioFijo
Beneficio <|.. DescuentoPorDiaDeSemana
Beneficio <|.r. DescuentoPorPagoEfectivo
'BeneficioPorPorcentaje <|-- DescuentoPorPagoEfectivo

Tarjeta <|-- TarjetaCredito
Tarjeta <|-- TarjetaDebito
Tarjeta <|.u. MediosDePago

Efectivo <|.. MediosDePago
BilleteraVirtual <|.. MediosDePago

'dudas

'en el orden en que le fue llegando: en estacion o en pedido
'tenemos muchos enums? (enum de tipo beneficio) -> no confundirnos TIPO DE DATO con ENUMs - validar si tiene sentido tener ENUM y CLASES (caso de metodos de pago)
'que es un "descuento especial" los dias de semana -> nos podemos tomar la libertad de definirlo como queramos
'datos de tarjeta estan de mas -> puede ser, analizar si es realmente necesario
'si la interfaz se puede usar como tipo de dato (MediosDePago) -> si, es un tipo de dato (como clase abstracta)
'interfaz de MediosDePago estaria bien o no es necesaria/deberia ser clase -> depende de nuestra solucion
'unificamos agregar/eliminarItem/Combo() a un tipo Producto -> depende de nuestra solucion

@enduml